@@ -5,6 +5,10 @@ Revision history for MooX-Failover
   - Changed description of the "constructor" option to remove any
     confusion which class it applies to.
 
+  [Enhancements]
+  - Added the ability to specify an alternative constructor name
+    on the original class.
+
 v0.2.1    2014-12-16 12:20:06+00:00 UTC
   [Enhancements]
   - Added check that we don't failover to the same class.
